--- a/PRACTICAS/paginapersonal.css
+++ b/PRACTICAS/paginapersonal.css
@@ -18,7 +18,7 @@ body{
 }
 
 .main{
-    background-color: hsla(220,14%,15%,0.75);
+    background-color: hsla(80,14%,15%,0.75);
     display: flex;
     flex-direction: column;
     gap: 1rem;
@@ -55,7 +55,7 @@ body{
     max-width: 2rem;
 }
 
-.footer-link-container{
+.footer-link-container:hover{
     transform: scale(1.25);
 }
 
