--- a/PRACTICAS/practicafigma.css
+++ b/PRACTICAS/practicafigma.css
@@ -7,11 +7,11 @@
 
 .header{
     background-color:#00AF1C;
-    padding: 2em;
+    padding: 1.5em;
     display: flex;
     justify-content: space-between;
     align-items: center;
-    border-radius: 15px;
+    border-radius: 5px;
 
 }
 
@@ -22,10 +22,12 @@
 .header li{
     margin-left: 1rem;
     list-style: none;
+    
 }
 
 .header nav a{
-    font-size: 15px;
+    font-size: 14px;
+    font-family: Arial, Helvetica, sans-serif;
 
 }
 
@@ -46,6 +48,7 @@
     color:#3B06D2;
     font-family: Arial, Helvetica, sans-serif;
     margin-left: 30px;
+    
 }
 
 .home p{
@@ -60,10 +63,34 @@
 }
 
 .home div img{
-    margin-left: 20px;
-    border-radius: 15 px;
+    margin-left: 15px;
+    border-radius: 5px;
 
 }
+
+.services h2{
+    color:#D206B2;
+    font-family: Arial, Helvetica, sans-serif;
+    margin-left: 30px;
+
+}
+
+.services p{
+    margin: 30px;
+}
+
+.services div{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+
+.services div img{
+    margin-left: 15px;
+    border-radius: 5px;
+
+}
+
 
 
 
