--- a/PRACTICAS/practicafigma.css
+++ b/PRACTICAS/practicafigma.css
@@ -138,6 +138,26 @@
     border-radius: 5px;
 }
 
+.list2 ul li{
+    margin-bottom: 1rem;
+    font-weight: 700;
+}
+
+.list2 li:first-child{
+    color: #AE8800;
+}
+
+.list2 li:nth-child(2){
+    color:#AE280B;
+}
+
+.list2 li:nth-child(3){
+    color:#060564;
+}
+
+.list2 li:last-child{
+    color:#637300;
+}
 
 
 
