--- a/PRACTICAS/practicafigma.css
+++ b/PRACTICAS/practicafigma.css
@@ -12,6 +12,8 @@
     justify-content: space-between;
     align-items: center;
     border-radius: 5px;
+    position: sticky;
+    top: 0;
     
 }
 
