--- a/PRACTICAS/animaciones.css
+++ b/PRACTICAS/animaciones.css
@@ -81,3 +81,38 @@
         transform: translateY(-400px);
     }
 }
+
+.lineas{
+    text-align: center;
+    width: 300px;
+    margin: auto;
+    font-size: 44px;
+    white-space: nowrap;
+    border-right: 2px solid black;
+    transform: translateY(-50%);
+    overflow: hidden;
+}
+
+.texto-animado-dos{
+    animation: texto-animado-dos 5s steps(144) 1s normal both;
+    cursor: 0.5s steps(50) infinite normal;
+    animation-iteration-count: infinite;
+}
+
+@keyframes texto-animado-dos{
+    from{
+        width: 0;
+    }
+    to{
+        width: 600px;
+    }
+}
+
+@keyframes cursor{
+    from{
+        border-right-color: red;
+    }
+    to{
+        border-right-color: transparent;
+    }
+}
