--- a/PRACTICAS/practicafigma.css
+++ b/PRACTICAS/practicafigma.css
@@ -50,11 +50,15 @@
     color:#3B06D2;
     font-family: Arial, Helvetica, sans-serif;
     margin-left: 30px;
+    margin-top: 50px;
     
 }
 
 .home p{
     margin: 30px;
+    font-size: 16px;
+    font-family: Arial, Helvetica, sans-serif;
+    line-height: 26px;
 }
 
 .home div{
@@ -74,11 +78,14 @@
     color:#D206B2;
     font-family: Arial, Helvetica, sans-serif;
     margin-left: 30px;
-
+    margin-top: 50px;
 }
 
 .services p{
     margin: 30px;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 16px;
+    line-height: 26px;
 }
 
 .services div{
@@ -96,6 +103,8 @@
 .list{
     margin-left:50px ;
     font-family: Arial, Helvetica, sans-serif;
+    font-size: 18px;
+    line-height: 44px;
 }
 
 .list ul li{
@@ -123,10 +132,14 @@
     color:#AAD206 ;
     font-family: Arial, Helvetica, sans-serif;
     margin-left: 30px;
+    margin-top: 50px;
 }
 
 .portafolio p{
     margin: 30px;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 16px;
+    line-height: 26px;
 }
 
 .portafolio div{
@@ -138,6 +151,13 @@
 .portafolio div img{
     margin-left: 15px;
     border-radius: 5px;
+}
+
+.list2{
+    margin: 50px;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 18px;
+    line-height: 44px;
 }
 
 .list2 ul li{
@@ -161,5 +181,65 @@
     color:#637300;
 }
 
+.contact h2{
+    color:#06D2C6;
+    font-family: Arial, Helvetica, sans-serif;
+    margin-left: 30px;
+    margin-top: 50px;
+}
 
+.contact p{
+    margin-left: 30px;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 16px;
+    line-height: 26px;
 
+}
+
+form{
+    display: flex;
+    flex-direction: column;
+    gap: 1.5rem;
+}
+
+input{
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 16px;
+    padding: 1.5rem;
+}
+
+textarea{
+    font-size: 16px;
+    padding: 1.5rem;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+button{
+    color: #22A900;
+    background-color: white;
+    border: 1px solid green;
+    width:195px;
+    height: 70px;
+    top: 2574px;
+    left: 40px;
+    margin-bottom: 150px;
+}
+
+/* FOOTER */
+
+footer{
+    display: flex;
+    background-color:#00AF1C;
+    justify-content: space-between;
+    padding: 1.5rem;
+    padding-top: 2rem;
+    padding-bottom: 2rem;
+}
+
+footer div{
+    color: white;
+    font-size: 24px;
+    font-weight: 700;
+    font-family: Arial, Helvetica, sans-serif;
+    line-height: 28px;
+}
