--- a/semana3/reto-figma-2.css
+++ b/semana3/reto-figma-2.css
@@ -82,6 +82,7 @@
     padding: 20px 60px 20px 60px;
     border-radius: 20px;
     box-shadow:0px 4px 4px 0px  rgba(0, 0, 0, 0.25);
+    cursor: pointer;
 }
 
 .boton:hover{
