--- a/semana3/reto4landingpage.css
+++ b/semana3/reto4landingpage.css
@@ -1,97 +1,125 @@
-*, html{
-    box-sizing: border-box;
-    font-family: Arial, Helvetica, sans-serif;
-}
-
-body{
+*{
     margin: 0;
+    padding: 0;
 }
 
-header{
-    height: 80px;
-    width: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    padding: 1rem;
-    position: fixed;
-    top: 0;
-    left: 0;
+h2{
+    font-size: 3rem;
 }
 
-header nav{
-    width: 100%;
+p{
+    color: rgb(164 167 170);
+    font-size: 14px;
+}
+
+.wrap{
+    margin: auto;
+    width: 960px;
+
+}
+
+.nav{
     display: flex;
     justify-content: space-between;
     align-items: center;
+    height: 15vh;
 }
 
-.header image{
-    height: 20px;
-    
+.button-free{
+    background-color: white;
+    border-radius: 20px;
+    border: 1px solid white;
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: bold;
+    padding: 10px 3em;
+    box-shadow: 0px 0px 4px black;
+
 }
 
-.boton{
-    height: 35px;
-    padding: 0 20px;
-    background-color: #fff;
-    border: 1px solid transparent;
-    cursor: pointer;
-    /*box shadow*/
-    border-radius: 30px;
-    box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
-    font-weight: 600;
-}
+/*section one*/
 
-.hero{
-    min-height: 100vh;
-    background: url(./recursolanding/images/bg-hero-mobile.svg) #edfbfe;
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: center;
+.section-one{
+    height: 65vh;
     display: flex;
     justify-content: center;
-    padding: 70px 2.5rem 2.5rem 2.5rem;
-}
-
-.wrapper{
-    display: flex;
-    flex-wrap: wrap;
-}
-
-.wrapper div{
-    width: 50%;
-}
-
-.hero .hero-image{
-    width: 90%;
-}
-
-.hero .hero-content{
-    display: flex;
-    flex-direction: column;
     align-items: center;
-    
+    text-align: center;
+    background-image: url(./recursolanding/images/bg-hero-desktop.svg);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+
 }
 
-.hero .hero-content h1{
-    margin-top: 50px;
-    font-size: 1.8rem;
-    
+.container-letter{
+    border: solid 1px;
+    text-align: center;
+    padding: 20px;
 }
 
-.hero .boton-dos{
-    background-color: hsl(322, 100%, 66%);
-    color: #fff;
-    height: 40px;
+.title{
+    font-size: 4rem;
+}
+
+.text-normal{
+    width: 100%;
+    margin-bottom: 20px;
+    padding-top: 40px;
+    font-size: 18px;
+}
+
+.button-pink{
+    background-color: rgb(255 85 204);
+    border: solid 1px rgb(255 85 204);
+    margin-top: 40px;
+    padding: 20px;
     border-radius: 30px;
-    border: 1px solid transparent;
-    padding: 0 50px;
-    font-weight: 600;
 }
 
-@media screen and (max-width:900px) {
-    .wrapper div{
-        width: 100%;
-    }
+.container-img img{
+    width: 80%;
+}
+
+/* section two */
+
+.section-two{
+    display: flex;
+    box-shadow: 1px 1px 6px black;
+    border-radius: 10px;
+}
+
+.container-img.two{
+    padding-top: 20px;
+    width: 40%;
+}
+
+.container-letter.parrafo{
+    align-items: start;
+   line-height: 3rem;
+   
+
+
+}
+
+/* footer */
+
+.footer{
+    background-color: hsl(192, 100%, 9%);
+    color: #fff;
+}
+
+.footer p{
+    color: #fff;
+}
+
+.logo-white{
+    filter: invert(1) brightness(0);
+
+}
+
+.footer div{
+    display: grid;
+    grid-template-columns: (2fr 1fr 1fr 2fr);
+    padding: 30px;
+    
 }
