--- a/semana3/reto-figma-3.css
+++ b/semana3/reto-figma-3.css
@@ -163,8 +163,9 @@ h1{
 
 /* contacto */
 
+
 .contact{
-    padding: 34px 176px 90px;
+    padding: 34px 170px 50px;
     background-color: #1687A0;
 }
 
@@ -174,8 +175,20 @@ h1{
     margin-bottom: 30px;
 }
 
-form{
+.contact .form{
+    display: grid;
+    flex-direction: column;
     align-items: center;
-    margin: 0 auto;
-    padding: 10px;
+    justify-content: center;
+    grid-template-columns: repeat(2, 1fr);
 }
+
+  .contact div{
+    display: flex;
+    width: 100%;
+    margin-bottom: 30px;
+    justify-content: space-between;
+  }
+  .contact div input{
+    padding: 20px 0 20px 5px;
+    width: 48%;
