--- a/semana3/reto-figma-3.css
+++ b/semana3/reto-figma-3.css
@@ -165,7 +165,7 @@ h1{
 
 
 .contact{
-    padding: 34px 170px 50px;
+    padding:40px 0px 90px 100px;
     background-color: #1687A0;
 }
 
@@ -175,20 +175,17 @@ h1{
     margin-bottom: 30px;
 }
 
-.contact .form{
+.form{
     display: grid;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    grid-template-columns: repeat(2, 1fr);
+    grid-template-columns: repeat(2,1fr);
 }
 
-  .contact div{
-    display: flex;
-    width: 100%;
-    margin-bottom: 30px;
-    justify-content: space-between;
-  }
-  .contact div input{
-    padding: 20px 0 20px 5px;
-    width: 48%;
+.form .input{
+    margin-top:20px;
+    padding: 10px;
+    border-radius: 5px;
+    width: 80%;
+    border: solid 2px #ccc;
+}
+
+ 
