--- a/semana3/reto4landingpage.css
+++ b/semana3/reto4landingpage.css
@@ -12,9 +12,14 @@ p{
     font-size: 14px;
 }
 
+button{
+    cursor: pointer;
+}
+
 .wrap{
     margin: auto;
     width: 960px;
+    font-family: Arial, Helvetica, sans-serif;
 
 }
 
@@ -32,90 +37,266 @@ p{
     font-family: Arial, Helvetica, sans-serif;
     font-weight: bold;
     padding: 10px 3em;
-    box-shadow: 0px 0px 4px black;
+    box-shadow: 0px 0px 4px rgb(158, 154, 154);
 
 }
 
 /*section one*/
 
 .section-one{
-    height: 65vh;
+    height:55vh;
+    padding: 20px;
     display: flex;
-    justify-content: center;
     align-items: center;
     text-align: center;
-    background-image: url(./recursolanding/images/bg-hero-desktop.svg);
+    background-image: url(./recursolanding/images/bg-hero-mobile.svg);
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
-
+    gap: 5%;
 }
 
+
 .container-letter{
-    border: solid 1px;
-    text-align: center;
-    padding: 20px;
+    width: 100%;
+    text-align: left;
+    padding: 0px;
 }
 
 .title{
-    font-size: 4rem;
+    font-size: 2rem;
 }
 
 .text-normal{
-    width: 100%;
     margin-bottom: 20px;
-    padding-top: 40px;
-    font-size: 18px;
+    padding-top: 20px;
+    font-size: 16px;
+    font-weight: 600;
+    color: rgb(91, 89, 89);
+    font-size: 16px;
+
 }
 
 .button-pink{
     background-color: rgb(255 85 204);
     border: solid 1px rgb(255 85 204);
-    margin-top: 40px;
-    padding: 20px;
-    border-radius: 30px;
+    margin-top: 20px;
+    width: 40%;
+    padding: 10px;
+    border-radius: 20px;
+    color: #fff;
+    font-weight: 600;
+    font-size: 12px;
+}
+
+.button-pink:hover{
+    background-color: #fff;
+    border: solid 1px rgb(255 85 204);
+    color: rgb(255 85 204);
+
 }
 
 .container-img img{
-    width: 80%;
+    width: 100%;
+    
 }
 
 /* section two */
 
-.section-two{
+.section-global{
     display: flex;
-    box-shadow: 1px 1px 6px black;
+    box-shadow: 1px 1px 6px rgb(198, 193, 193);
     border-radius: 10px;
+    padding: 60px;
+    
 }
 
-.container-img.two{
-    padding-top: 20px;
-    width: 40%;
+.section-global div img{
+    display: flex;
+    padding-top: 40px;
+    width: 70%;
 }
 
-.container-letter.parrafo{
-    align-items: start;
-   line-height: 3rem;
-   
+.container-img-two{
+    display: flex;
+    justify-content: right;
+}
 
+.container-parrafo-two{
+   align-items:start;
+   line-height: 2rem;
+   margin: auto;
+   padding-top: 60px;
+}
+
+.container-parrafo-two h2{
+    font-size: 2rem;
+    margin-bottom: 10px;
+}
+
+.container-parrafo-two p{
+    font-size: 15px;
+    line-height: 1rem;
+}
+
+
+/* section for*/
+
+
+.container-img-three{
+    display: flex;
+    justify-content: left;
+}
+
+.container-parrafo-three{
+   align-items:start;
+   line-height: 2rem;
+   margin: auto;
+   padding-top: 60px;
+}
+
+.container-parrafo-three h2{
+    font-size: 2rem;
+    margin-bottom: 10px;
+    
+}
+
+.container-parrafo-three p{
+    font-size: 15px;
+    line-height: 1rem;
+}
+
+/*section for */
+
+.section-for{
+    display: flex;
+    box-shadow: 1px 1px 6px rgb(198, 193, 193);
+    border-radius: 10px;
+    padding: 60px 60px 100px 60px;
+    
+}
+
+.section-for div img{
+    display: flex;
+    padding-top: 40px;
+    width: 70%;
+}
+
+.container-img-for{
+    display: flex;
+    justify-content: right;
+}
+
+.container-parrafo-for{
+   align-items:start;
+   line-height: 2rem;
+   margin: auto;
+   padding-top: 60px;
+}
+
+.container-parrafo-for h2{
+    font-size: 2rem;
+    margin-bottom: 10px;
+}
+
+.container-parrafo-for p{
+    font-size: 15px;
+    line-height: 1rem;
+}
+
+/*ssection five*/
+
+.section-five{
+    display: flex;
+    position: absolute;
+    background-color: white;
+    margin-top: -4rem;
+    margin-left: 15rem;
+    width: 30rem;
+    height: 6rem;
+    border-radius: 10px;
+    padding-top: 1rem;
+    padding-bottom: 1.5rem;
+    justify-content: center;
+    box-shadow: 1px 1px 6px rgb(198, 193, 193);
+}
+
+.ready{
+    position: relative;
+    display: flex;
+}
+
+.ready h2{
+    font-size: 1.5rem;
+    text-align: center;
+}
+
+.button-ready{
+    display: flex;
+    position: relative;
+    justify-content: center;
+    margin-top: 1rem;
+}
+
+.button-ready button{
+    background-color: rgb(255 85 204);
+    border: solid 1px rgb(255 85 204);
+    margin-top: 10px;
+    width: 60%;
+    padding: 15px;
+    border-radius: 20px;
+    color: #fff;
+    font-weight: 600;
+    font-size: 12px;
+}
+
+.button-ready button:hover{
+    background-color: #fff;
+    border: solid 1px rgb(255 85 204);
+    color: rgb(255 85 204);
 
 }
+
+
+
+
 
 /* footer */
 
 .footer{
+    display: flex;
+    flex-direction: column;
     background-color: hsl(192, 100%, 9%);
     color: #fff;
-}
-
-.footer p{
-    color: #fff;
+    padding-top: 5rem;
+    padding-bottom: 3rem;
+    border: solid white;
 }
 
 .logo-white{
-    filter: invert(1) brightness(0);
+    filter: brightness(0) invert(100%);
 
 }
+
+.location{
+    border: solid white;
+    width: 30%;
+    padding 0px;
+}
+
+
+
+.floatbox button {
+    padding: 1rem;
+    border-radius: 50px;
+    margin-top: 30px;
+    background-color: hsl(322, 100%, 66%);
+    border: none;
+    color: #FFF;
+    font-weight: bold;
+    box-shadow: 0 3px 15px 4px #d3d3d3;
+}
+
 
 .footer div{
     display: grid;
