--- a/semana4/reto 6/index6.css
+++ b/semana4/reto 6/index6.css
@@ -12,7 +12,7 @@
 /* Header */
 
 .wrap{
-    height: 20px;
+    height: 350px;
     width: 100%;
 }
 
@@ -97,16 +97,49 @@ nav ul li .home{
 /*  BUSCADOR  */
 
 main{
+    max-width:960px;
+    margin: auto;
 
 }
 
-.box{
-    display: flex;
-    justify-content: center;
-    border: solid;
-    margin-top: 330px;
-    height: 150px;
 
+.box-search{
+    position: relative;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    height: 150px; 
+}
+
+.search{
+    width: 100%;
+    padding: 1rem;
+    padding-left: 2.5rem;
+    border: transparent;
+    background-color: #e4e3e3f0;
+    border-radius: 15px;
+}
+
+.box i{
+    position: absolute;
+    top: 65px;
+    left: 1rem;
+    cursor: pointer;
+    
+}
+
+/* ARTICLE */
+
+.article-container{
+    display: flex;
+    justify-content: space-between;
+    position: relative;
+    margin-top: 2rem;
+}
+
+.article-text{
+    
 }
 
 
